[gd_scene load_steps=4 format=3 uid="uid://c4j8d5f2m3n8p"]

[ext_resource type="Script" path="res://src/scripts/ui/dialogue/dialogue_box.gd" id="1_dialogue_box"]
[ext_resource type="Script" path="res://src/scripts/ui/dialogue/text_animator.gd" id="2_text_animator"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -250.0
offset_right = -80.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
script = ExtResource("1_dialogue_box")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ContentContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
theme_override_constants/separation = 10

[node name="SpeakerLabel" type="Label" parent="BackgroundPanel/ContentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Speaker Name"
horizontal_alignment = 0
vertical_alignment = 0

[node name="DialogueText" type="RichTextLabel" parent="BackgroundPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "This is where the dialogue text will appear with typing animation."
fit_content = true
scroll_active = false

[node name="ChoicesContainer" type="VBoxContainer" parent="BackgroundPanel/ContentContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="TextAnimator" type="Node" parent="."]
script = ExtResource("2_text_animator")